--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp39-cp39-linux_x86_6
 tensorboard
 opencv-python
 opencv-contrib-python
+tqdm
